project/stage/testing/semantic/semantic_tests/accept/literal_exprs.ul
void main() {
    1;
    0.0;
    false;
    true;
    "string";
    'c';
}
