project/stage/testing/semantic/semantic_tests/reject/float_call_if_cond.ul
void main() {
    if (gimmeFloat() ) {}
}

float gimmeFloat() {
    return 0.0;
}
